adapt zea varieties with prefix.

--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -2617,7 +2617,6 @@ eng:
     varieties:
       choices: #?
       items:
-        # aallexia: "Aallexia"
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Additif"
@@ -2637,7 +2636,6 @@ eng:
         # aves: "Oiseau"
         # baler: "Botteleuse"
         # bambusa: "Bambou"
-        # bergxxon: "Bergxxon"
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
         bioproduct: "Bioproduct"
@@ -2723,7 +2721,6 @@ eng:
         # lens: "Lentille"
         # lepus: "Lagomorphe"
         # lewis: "Lewis"
-        # lg3490: "Lg3490"
         # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
@@ -2899,6 +2896,9 @@ eng:
         # wine: "Vin"
         worker: "Worker"
         # zea: "Maïs"
+        # zea_aallexia: "Zea - aallexia"
+        # zea_bergxxon: "Zea - bergxxon"
+        # zea_lg3490: "Zea - lg3490"
         zone: "Zone"
         # zone_property_title: "Titre de propriété terrienne"
       name: "Name"
