--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -2498,7 +2498,6 @@ jpn:
     varieties:
       choices: #?
       items:
-        # aallexia: "Aallexia"
         # acetal: "Acetal"
         # actilact: "Actilact"
         # additive: "Additif"
@@ -2518,7 +2517,6 @@ jpn:
         # aves: "Oiseau"
         # baler: "Botteleuse"
         # bambusa: "Bambou"
-        # bergxxon: "Bergxxon"
         # beta: "Betterave"
         # betulaceae: "Betulaceae"
         # bioproduct: "Produit vivant"
@@ -2604,7 +2602,6 @@ jpn:
         # lens: "Lentille"
         # lepus: "Lagomorphe"
         # lewis: "Lewis"
-        # lg3490: "Lg3490"
         # liliaceae: "Liliaceae"
         # linaceae: "Linaceae"
         # linum: "Lin"
@@ -2779,6 +2776,9 @@ jpn:
         # wine: "Vin"
         # worker: "Travailleur"
         # zea: "Maïs"
+        # zea_aallexia: "Zea - aallexia"
+        # zea_bergxxon: "Zea - bergxxon"
+        # zea_lg3490: "Zea - lg3490"
         # zone: "Zone physique"
         # zone_property_title: "Titre de propriété terrienne"
       # name: "Variétés"
