--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -42,13 +42,16 @@ eng:
         # blow: "Souffler"
         # bunch: "Boteller"
         # care: "Soigner"
+        # catalyze: "Catalyser"
         catch: "Catch"
+        # chaptelise: "Chaptaliser"
         # clean: "Nettoyer"
         consume: "Consume"
         # cut: "Couper"
         # deliver: "Distribuer"
         drive: "Drive"
         # feed: "Nourrir"
+        # fermentize: "Fermenter"
         fertilize: "Fertilize"
         # freeze: "Congeler"
         germinate: "Germinate" #?
@@ -66,6 +69,7 @@ eng:
         # pick: "Cueillir"
         plow: "Plow"
         # plow_superficially: "Travailler le sol superficiellement"
+        # press: "Presser"
         produce: "Produce"
         # rake: "Ratisser"
         # repair: "Réparer"
@@ -76,6 +80,7 @@ eng:
         store_fluid: "Store fluid"
         store_gaz: "Store gaz"
         store_liquid: "Store liquid"
+        # sulfurize: "Sulfuriser"
         tow: "Tow"
         # uncompact: "Décompacter"
       name: "Name"
@@ -228,6 +233,7 @@ eng:
         # own_building_expenses: "Constructions (sur sol propre)"
         # ownership_assets: "Titres immobilisés (droits de propriété)"
         # ownership_loan: "Prêts consentis"
+        # packaging: "Emballages"
         # pending_deposit_payments: "Valeurs à l’encaissement "
         plant_derivative_stock: "Plant derivative stock"
         plant_derivatives_product: "Plant derivatives product" #?
@@ -1191,6 +1197,7 @@ eng:
         # temperature: "Température"
         # time: "Temps"
         # volume: "Volume"
+        # volume_concentration: "Concentration volumique"
         # volume_flow: "Débit volumique"
       # name: "Dimensions"
       property_natures:
@@ -1436,6 +1443,7 @@ eng:
         # manganese_concentration: "Teneur en manganèse"
         # mass_area_density: "Masse par surface"
         # mass_area_yield: "Rendement en masse par surface"
+        # mass_volume_density: "Masse par volume"
         # maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         # maximal_storable_net_mass: "Capacité de stockage massique maximale"
         # maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -1478,7 +1486,8 @@ eng:
         # somatic_cell_concentration: "Dénombrement des cellules somatiques"
         sowable: "Sowable" #?
         # subsoil_nature: "Type de sous-sol"
-        # sulfur_concentration: "Teneur en Soufre"
+        # sulfur_concentration: "Teneur en soufre"
+        # sulfur_dioxyde_concentration: "Teneur en dioxyde de soufre (SO2)"
         temperature: "Temperature"
         # thousand_grains_mass: "Poids de mille grains"
         # tiller_count: "Nombre de talles"
@@ -1487,6 +1496,7 @@ eng:
         urea_concentration: "Urea concentration"
         # usage_duration: "Durée d’utilisation"
         # volume_area_density: "Volume par surface"
+        # volume_density: "Densité en masse"
         # water_content_rate: "Teneur en eau"
         # width: "Largeur"
         # woodstock_variety: "Variété du porte-greffe"
@@ -1750,6 +1760,7 @@ eng:
       # name: "États de la reproduction végétale"
     procedure_natures:
       items:
+        # addition: "Ajout de produits"
         animal_cares: "Animal cares" #?
         # animal_curative_medicine_admission: "Traitement curatif des maladies animales"
         # animal_feeding: "Alimentation des animaux"
@@ -1757,12 +1768,14 @@ eng:
         # animal_housing_maintenance: "Entretien des bâtiments d’élevage"
         # animal_preventive_medicine_admission: "Traitement préventif des maladies animales"
         # animal_production: "Productions animales"
+        # blending: "Mélange"
         # cleaning: "Nettoyage"
         # consummables_addition: "Mise à niveau"
         # cultipacking: "Cultipacking"
         enrichment: "Enrichment" #?
         feeding: "Feeding" #?
         # fermentation: "Fermentation"
+        # filtration: "Filtration"
         # food_supply: "Alimentation"
         # grinding: "Broyage"
         # growth_control: "Contrôle de croissance"
@@ -1778,9 +1791,11 @@ eng:
         # plant_fertilisation: "Fertilisation"
         # plant_illness_treatment: "Protection des cultures"
         # plowing: "Labour"
+        # pressing: "Pressage"
         production: "Production" #?
         # pruning: "Taille"
         # raking: "Hersage"
+        # remontage: "Remontage"
         reproduction: "Reproduction" #?
         # soil_cleaning: "Désinfection du sol"
         # soil_enrichment: "Amendement"
@@ -1868,6 +1883,7 @@ eng:
         # male_young_cow: "Taurillon"
         # milk: "Lait"
         # natural_water: "Eau de pluie / puit"
+        # oenological_product: "Produit oenologique"
         # other_consumable: "Autres consommables"
         # oyster_band: "Huître"
         # plant: "Plant"
@@ -1899,10 +1915,12 @@ eng:
           # 12kg_bag: "sac de 12kg"
           # 150TG_bag: "sac de 150.000 grains"
           # 1l_dose: "dose de 1l"
+          # 20ml_dose: "Dose de 20 ml"
           # 220TG_bag: "sac de 220.000 grains"
           # 24liter_can: "Bidon de 24 litres"
           # 25kg_bag: "sac de 25kg"
           # 50TG_bag: "sac de 50.000 grains"
+          # 50ml_dose: "Dose de 50 ml"
           # 75cl_bottle: "Bouteille de 75cl"
           # bag: "sac"
           # band: "Bande"
@@ -2160,6 +2178,10 @@ eng:
         # silage_distributor: "Désileuse"
         # silage_division: "Zone de stockage de l’ensilage"
         # small_equipment: "Petit matériel"
+        # so2_liquid_a8: "So2 liquide 8%"
+        # so2_liquid_p10: "So2 liquide 10%"
+        # so2_solid_2g: "So2 solide pur 2g"
+        # so2_solid_5g: "So2 solide pur 5g"
         # so4_vine_seedling: "Plant de vigne standard (So4)"
         # sorghum_crop: "Culture de sorgho"
         # sorghum_seed_25: "Semence de sorgho - sac de 25kg"
@@ -2193,6 +2215,7 @@ eng:
         # vine_grape_berry: "Grappe de raisin"
         # vine_grape_crop: "Culture de vigne"
         # vine_grape_must: "Mout de raisin"
+        # vine_residu: "Co-produit du raisin"
         # walnut_crop: "Culture de noyer"
         # wheat_crop: "Culture de blé"
         # wheat_grain: "Graine de blé"
@@ -2201,6 +2224,7 @@ eng:
         # wheat_straw_round_bales: "Botte de paille de blé - balle ronde"
         # wheat_straw_small_rectangular_bales: "Botte de paille de blé - botte petit format"
         # wine: "Vin"
+        # wine_press: "Pressoir"
         # wine_tank: "Cuve à vin"
         # wine_vinasse: "Vinasse de distillerie"
         # winter_barley_crop: "Culture d’orge d’hiver"
@@ -2259,12 +2283,14 @@ eng:
         # freezer_tank: "Congélateur"
         # fruit: "Fruit"
         # fruit_crop: "Culture fruitière"
+        # fruit_residu: "Co-produit de fruits"
         # fuel: "Carburant"
         # fuel_tank: "Cuve à fioul"
         # fungicide: "Fongicide"
         # gas: "Gaz"
         grain: "Grain"
         # grain_crop: "Culture à graines"
+        # grape: "Raisin"
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
@@ -2311,6 +2337,7 @@ eng:
         # silage: "Ensilage"
         # silage_division: "Zone de stockage de l’ensilage"
         # small_equipment: "Petit matériel"
+        # so2_solution: "Solution de dioxyde de soufre (SO2)"
         # sower: "Semoir"
         # species: "Epices"
         # sprayer: "Pulvérisateur"
@@ -2328,6 +2355,7 @@ eng:
         wheat_crop: "Wheat crop" #?
         # wine: "Vin"
         # wine_crop: "Vigne"
+        # wine_press: "Pressoir (vin)"
         # wine_tank: "Cuve à vin"
         young_cow: "Young cow" #?
       name: "Name"
@@ -2527,6 +2555,8 @@ eng:
         # candela: "Candela"
         celsius: "Celsius"
         # centiliter: "Centilitre"
+        # centiliter_per_hectoliter: "Centilitre par hectolitre"
+        # centiliter_per_liter: "Centilitre par litre"
         # centimeter: "Centimètre"
         # centimole: "Centimole"
         # centimole_per_kilogram: "Centimole par kilogramme"
@@ -2538,6 +2568,7 @@ eng:
         # french_horsepower: "Cheval-vapeur français"
         # gradian: "Gradian"
         # gram: "Gramme"
+        # gram_per_hectoliter: "Gramme par hectolitre"
         # gram_per_kilogram: "Gramme par kilogramme"
         # gram_per_liter: "Gramme par litre"
         # hectare: "Hectare"
@@ -2576,6 +2607,7 @@ eng:
         # milligram_per_kilogram: "Milligramme par kilogramme"
         # milligram_per_liter: "Milligramme par litre"
         # milliliter: "Millilitre"
+        # milliliter_per_liter: "Millilitre par litre"
         # millimeter: "Millimètre"
         # million: "Million"
         # millionth: "Millionième"
@@ -2684,6 +2716,7 @@ eng:
         # fragaria_ananassa: "Fragaria ananassa"
         # fragaria_ananassa_mara_des_bois: "Fragaria ananassa - Mara des bois"
         # fruit: "Fruit"
+        # fruit_juice: "Jus de fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         fungus: "Fungus"
@@ -2691,6 +2724,8 @@ eng:
         # gas: "Essence"
         # glycine: "Glycine"
         # grain: "Grain"
+        # grape: "Raisin"
+        # grape_juice: "Jus de raisin"
         # grass: "Herbe"
         # grossulariaceae: "Grossulariaceae"
         # guano: "Guano"
@@ -2759,6 +2794,7 @@ eng:
         # poaceae: "Graminée"
         # pollen: "Pollen"
         # preparation: "Préparation"
+        # press: "Pressoir"
         product: "Product"
         product_group: "Product group"
         property_title: "Property title"
@@ -2894,6 +2930,7 @@ eng:
         # walnut: "Noyer"
         # water: "Eau"
         # wine: "Vin"
+        # wine_coproduct: "Co-produit du vin"
         worker: "Worker"
         # zea: "Maïs"
         # zea_aallexia: "Zea - aallexia"
