--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -231,6 +231,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -521,6 +525,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -811,6 +819,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -1101,6 +1113,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -1383,6 +1399,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        cells_concentration: "Concentration en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
@@ -1419,7 +1436,7 @@ fra:
         manganese_concentration: "Teneur en manganèse"
         mass_area_density: "Masse par surface"
         mass_area_yield: "Rendement en masse par surface"
-        mass_volume_density: "Masse par volume"
+        mass_volume_density: "Concentration"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -1471,7 +1488,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         volume_area_density: "Volume par surface"
-        volume_density: "Densité en masse"
+        volume_density: "Concentration"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -1665,6 +1682,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -2027,6 +2048,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -2346,6 +2371,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -2830,6 +2859,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -2965,6 +2998,7 @@ fra:
         base-sowing: "Semis"
         base-spraying_on_cultivation: "Pulvérisation sur culture"
         base-straw_bunching: "Pressage de fourrages"
+        base-sulfur_addition: "Sulfitage"
         base-superficial_plowing: "Déchaumage / Préparation du sol"
         base-uncompacting: "Décompactage"
         base-wheat_crop: "Culture de blé (standard)"
@@ -3177,6 +3211,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -3467,6 +3505,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -3899,6 +3941,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -4189,6 +4235,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -4537,6 +4587,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -4827,6 +4881,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -5117,6 +5175,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -5406,6 +5468,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -5696,6 +5762,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -5986,6 +6056,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -6164,6 +6238,7 @@ fra:
         motor_oil: "Huile moteur"
         mower: "Faucheuse"
         natural_water: "Eau de pluie ou de puit"
+        oenological_yeast: "Levure oenologique"
         organic_fertilizer: "Engrais organique"
         oyster_band: "Bande d’huître"
         packaged_process_food: "Aliments transformés et conditionnés"
@@ -6388,6 +6463,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -6711,6 +6790,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -7000,6 +7083,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -7112,6 +7199,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        cells_concentration: "Concentration en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
@@ -7148,7 +7236,7 @@ fra:
         manganese_concentration: "Teneur en manganèse"
         mass_area_density: "Masse par surface"
         mass_area_yield: "Rendement en masse par surface"
-        mass_volume_density: "Masse par volume"
+        mass_volume_density: "Concentration"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -7200,7 +7288,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         volume_area_density: "Volume par surface"
-        volume_density: "Densité en masse"
+        volume_density: "Concentration"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -7216,6 +7304,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        cells_concentration: "Concentration en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
@@ -7252,7 +7341,7 @@ fra:
         manganese_concentration: "Teneur en manganèse"
         mass_area_density: "Masse par surface"
         mass_area_yield: "Rendement en masse par surface"
-        mass_volume_density: "Masse par volume"
+        mass_volume_density: "Concentration"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -7304,7 +7393,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         volume_area_density: "Volume par surface"
-        volume_density: "Densité en masse"
+        volume_density: "Concentration"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -7498,6 +7587,10 @@ fra:
         rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        saccharomyces: "Saccharomyces"
+        saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        saccharomycetaceae: "Saccharomycetaceae"
         salmo: "Salmonidé"
         salt: "Sel"
         sand: "Sable"
@@ -7609,6 +7702,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        cells_concentration: "Concentration en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
@@ -7645,7 +7739,7 @@ fra:
         manganese_concentration: "Teneur en manganèse"
         mass_area_density: "Masse par surface"
         mass_area_yield: "Rendement en masse par surface"
-        mass_volume_density: "Masse par volume"
+        mass_volume_density: "Concentration"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -7697,7 +7791,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         volume_area_density: "Volume par surface"
-        volume_density: "Densité en masse"
+        volume_density: "Concentration"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
@@ -7713,6 +7807,7 @@ fra:
         calving_ease_index: "Index de facilité de naissance"
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        cells_concentration: "Concentration en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
@@ -7749,7 +7844,7 @@ fra:
         manganese_concentration: "Teneur en manganèse"
         mass_area_density: "Masse par surface"
         mass_area_yield: "Rendement en masse par surface"
-        mass_volume_density: "Masse par volume"
+        mass_volume_density: "Concentration"
         maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         maximal_storable_net_mass: "Capacité de stockage massique maximale"
         maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -7801,7 +7896,7 @@ fra:
         urea_concentration: "Teneur moyenne en urée"
         usage_duration: "Durée d’utilisation"
         volume_area_density: "Volume par surface"
-        volume_density: "Densité en masse"
+        volume_density: "Concentration"
         water_content_rate: "Teneur en eau"
         width: "Largeur"
         woodstock_variety: "Variété du porte-greffe"
