--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1326,6 +1326,7 @@ spa:
         # calving_ease_index: "Index de facilité de naissance"
         # cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
+        # cells_concentration: "Concentration en cellules actives"
         # certification: "Certification"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # copper_concentration: "Teneur en cuivre"
@@ -1362,7 +1363,7 @@ spa:
         # manganese_concentration: "Teneur en manganèse"
         # mass_area_density: "Masse par surface"
         # mass_area_yield: "Rendement en masse par surface"
-        # mass_volume_density: "Masse par volume"
+        # mass_volume_density: "Concentration"
         # maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
         # maximal_storable_net_mass: "Capacité de stockage massique maximale"
         # maximal_storable_net_volume: "Capacité de stockage volumique maximale"
@@ -1414,7 +1415,7 @@ spa:
         # urea_concentration: "Teneur moyenne en urée"
         # usage_duration: "Durée d’utilisation"
         # volume_area_density: "Volume par surface"
-        # volume_density: "Densité en masse"
+        # volume_density: "Concentration"
         # water_content_rate: "Teneur en eau"
         # width: "Largeur"
         # woodstock_variety: "Variété du porte-greffe"
@@ -1819,17 +1820,19 @@ spa:
     product_nature_variants:
       choices:
         unit_name:
-          # 100g_dose: "dose de 100g"
-          # 10ml_dose: "dose de 10ml"
-          # 12kg_bag: "sac de 12kg"
-          # 150TG_bag: "sac de 150.000 grains"
-          # 1l_dose: "dose de 1l"
+          # 100g_dose: "Dose de 100g"
+          # 10ml_dose: "Dose de 10ml"
+          # 12kg_bag: "Sac de 12kg"
+          # 150TG_bag: "Sac de 150.000 grains"
+          # 1l_dose: "Dose de 1l"
           # 20ml_dose: "Dose de 20 ml"
-          # 220TG_bag: "sac de 220.000 grains"
+          # 220TG_bag: "Sac de 220.000 grains"
           # 24liter_can: "Bidon de 24 litres"
-          # 25kg_bag: "sac de 25kg"
-          # 50TG_bag: "sac de 50.000 grains"
+          # 25kg_bag: "Sac de 25kg"
+          # 2g_pill: "Comprimé de 2g"
+          # 50TG_bag: "Sac de 50.000 grains"
           # 50ml_dose: "Dose de 50 ml"
+          # 5g_pill: "Comprimé de 5g"
           # 75cl_bottle: "Bouteille de 75cl"
           # bag: "sac"
           # band: "Bande"
@@ -2042,6 +2045,7 @@ spa:
         # mower: "Faucheuse"
         # mud: "Boue"
         # natural_water: "Eau de pluie / du puit"
+        # oenological_yeast_sc_500g: "Levure oenologique - sachet de 500g"
         # office_building: "Bureau"
         # office_building_division: "Pièce de bureau"
         # other_herbicide: "Herbicide autre"
@@ -2226,6 +2230,7 @@ spa:
         # motor_oil: "Huile moteur"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie ou de puit"
+        # oenological_yeast: "Levure oenologique"
         # organic_fertilizer: "Engrais organique"
         # oyster_band: "Bande d’huître"
         # packaged_process_food: "Aliments transformés et conditionnés"
@@ -2428,6 +2433,8 @@ spa:
         # ampere: "Ampère"
         # are: "Are"
         # bar: "Bar"
+        # billion: "Milliard"
+        # billion_per_gram: "Milliard par gramme"
         # candela: "Candela"
         # celsius: "Celsius"
         # centiliter: "Centilitre"
@@ -2447,6 +2454,7 @@ spa:
         # gram_per_hectoliter: "Gramme par hectolitre"
         # gram_per_kilogram: "Gramme par kilogramme"
         # gram_per_liter: "Gramme par litre"
+        # gram_per_square_meter: "Gramme par mètre carré"
         # hectare: "Hectare"
         # hectoliter: "Hectolitre"
         # hectoliter_per_hectare: "Hectolitre par hectare"
@@ -2712,6 +2720,10 @@ spa:
         # rubus_idaeus_tulameen: "Rubus idaeus - Tulameen"
         # rubus_idaeus_willamette: "Rubus idaeus - Willamette"
         # rubus_idaeus_zeva: "Rubus idaeus - Zeva"
+        # saccharomyces: "Saccharomyces"
+        # saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
+        # saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
+        # saccharomycetaceae: "Saccharomycetaceae"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
