update fermentation procedure

--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1221,6 +1221,7 @@ fra:
         cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
         cells_concentration: "Concentration en cellules actives"
+        cells_mass_concentration: "Concentration massique en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en cuivre"
@@ -2399,6 +2400,7 @@ fra:
         milliliter_per_liter: "Millilitre par litre"
         millimeter: "Millimètre"
         million: "Million"
+        million_per_liter: "Million par litre"
         millionth: "Millionième"
         millisecond: "Millisecond"
         minute: "Minute"
