--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1772,7 +1772,7 @@ spa:
         # cattle_herd: "Troupeau de bovins"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
-        # electricity: "Electricité"
+        # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_rent: "Location d’équipement"
         # female_adult_cow: "Vache"
@@ -1819,42 +1819,42 @@ spa:
     product_nature_variants:
       choices:
         unit_name:
-          # 100g_dose: "dose de 100g"
-          # 10ml_dose: "dose de 10ml"
-          # 12kg_bag: "sac de 12kg"
-          # 150TG_bag: "sac de 150.000 grains"
-          # 1l_dose: "dose de 1l"
-          # 20ml_dose: "Dose de 20 ml"
-          # 220TG_bag: "sac de 220.000 grains"
-          # 24liter_can: "Bidon de 24 litres"
-          # 25kg_bag: "sac de 25kg"
-          # 50TG_bag: "sac de 50.000 grains"
-          # 50ml_dose: "Dose de 50 ml"
+          # 100g_dose: "Dose de 100g"
+          # 10ml_dose: "Dose de 10ml"
+          # 12kg_bag: "Sac de 12kg"
+          # 150TG_bag: "Sac de 150.000 grains"
+          # 1l_dose: "Dose de 1l"
+          # 20ml_dose: "Dose de 20ml"
+          # 220TG_bag: "Sac de 220.000 grains"
+          # 24liter_can: "Bidon de 24l"
+          # 25kg_bag: "Sac de 25kg"
+          # 50TG_bag: "Sac de 50.000 grains"
+          # 50ml_dose: "Dose de 50ml"
           # 75cl_bottle: "Bouteille de 75cl"
-          # bag: "sac"
+          # bag: "Sac"
           # band: "Bande"
           # big_rectangular_bale: "Balle ronde moyenne densité"
-          # box: "boîte"
-          # building: "bâtiment"
-          # can: "bidon"
-          # cubic_meter: "mètre cube"
-          # equipment: "équipement"
-          # gram: "Gram"
-          # head: "tête"
-          # hectare: "hectare"
+          # box: "Boîte"
+          # building: "Bâtiment"
+          # can: "Bidon"
+          # cubic_meter: "Mètre cube"
+          # equipment: "Équipement"
+          # gram: "Gramme"
+          # head: "Tête"
+          # hectare: "Hectare"
           # hectoliter: "Hectolitre"
-          # hour: "heure"
-          # kilogram: "kilogramme"
-          # kilowatt_hour: "Kilowatt Heure"
-          # liter: "litre"
-          # person: "personne"
-          # plants: "Plants"
-          # room: "salle"
+          # hour: "Heure"
+          # kilogram: "Kilogramme"
+          # kilowatt_hour: "Kilowatt-heure"
+          # liter: "Litre"
+          # person: "Personne"
+          # plant: "Plant"
+          # room: "Salle"
           # round_bale: "Botte ronde"
           # small_rectangular_bale: "Botte rectangulaire petit format (100*40*40)"
           # square_meter: "Mètre carré"
-          # ton: "tonne"
-          # unit: "unité"
+          # ton: "Tonne"
+          # unit: "Unité"
       items:
         # 115g_jam: "Pot de 115g de confiture"
         # 230g_jam: "Pot de 230g de confiture"
@@ -2639,7 +2639,7 @@ spa:
         # malus: "Pommier"
         # mammalia: "Mammifère"
         # manure: "Fumier"
-        # matter: "Matérialisable"
+        # matter: "Matière"
         # meat: "Viande"
         # medicago: "Medicago"
         # medicine: "Médicament"
@@ -2720,7 +2720,7 @@ spa:
         # seedling: "Plant"
         # segorbe: "Segorbe"
         # service: "Service"
-        # settlement: "Agencement"
+        # settlement: "Aménagement"
         # silage: "Ensilage"
         # slurry: "Lisier"
         # solanaceae: "Solanaceae"
