--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -1330,6 +1330,7 @@ arb:
         # cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
         # cells_concentration: "Concentration en cellules actives"
+        # cells_mass_concentration: "Concentration massique en cellules actives"
         # certification: "Certification"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # copper_concentration: "Teneur en cuivre"
@@ -2497,6 +2498,7 @@ arb:
         # milliliter_per_liter: "Millilitre par litre"
         # millimeter: "Millimètre"
         # million: "Million"
+        # million_per_liter: "Million par litre"
         # millionth: "Millionième"
         # millisecond: "Millisecond"
         # minute: "Minute"
@@ -2603,7 +2605,6 @@ arb:
         # fragaria_ananassa: "Fragaria ananassa"
         # fragaria_ananassa_mara_des_bois: "Fragaria ananassa - Mara des bois"
         # fruit: "Fruit"
-        # fruit_juice: "Jus de fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         # fungus: "Champignon"
@@ -2612,7 +2613,6 @@ arb:
         # glycine: "Glycine"
         # grain: "Grain"
         # grape: "Raisin"
-        # grape_juice: "Jus de raisin"
         # grass: "Herbe"
         # grossulariaceae: "Grossulariaceae"
         # guano: "Guano"
@@ -2635,6 +2635,7 @@ arb:
         # item: "Pièce"
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
+        # juice: "Jus"
         # lamiaceae: "Lamiaceae"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
