--- a/config/locales/arb/procedures.yml
+++ b/config/locales/arb/procedures.yml
@@ -125,6 +125,7 @@ arb:
     # base-animal_treatment: "Traitement animal"
     # base-calving_one: "Vêlage unique"
     # base-calving_twin: "Vêlage jumeaux"
+    # base-chaptalization: "Chaptalisation"
     # base-direct_silage: "Ensilage direct"
     # base-fuel_up: "Plein de carburant"
     # base-grains_harvest: "Moisson"
