--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1404,6 +1404,7 @@ eng:
         # cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
         # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la capacité d’échange cationique (CEC)"
         cells_concentration: "Cells concentration"
+        # cells_mass_concentration: "Concentration massique en cellules actives"
         # certification: "Certification"
         clostridial_spores_concentration: "Clostridial spores concentration"
         # copper_concentration: "Teneur en cuivre"
@@ -2617,6 +2618,7 @@ eng:
         # milliliter_per_liter: "Millilitre par litre"
         # millimeter: "Millimètre"
         # million: "Million"
+        # million_per_liter: "Million par litre"
         # millionth: "Millionième"
         # millisecond: "Millisecond"
         # minute: "Minute"
@@ -2723,7 +2725,6 @@ eng:
         # fragaria_ananassa: "Fragaria ananassa"
         # fragaria_ananassa_mara_des_bois: "Fragaria ananassa - Mara des bois"
         # fruit: "Fruit"
-        # fruit_juice: "Jus de fruit"
         # fuel: "Gasoil"
         # fungicide: "Produit fongicide"
         fungus: "Fungus"
@@ -2732,7 +2733,6 @@ eng:
         # glycine: "Glycine"
         # grain: "Grain"
         # grape: "Raisin"
-        # grape_juice: "Jus de raisin"
         # grass: "Herbe"
         # grossulariaceae: "Grossulariaceae"
         # guano: "Guano"
@@ -2755,6 +2755,7 @@ eng:
         # item: "Pièce"
         # juglandaceae: "Juglandaceae"
         # juglans: "Juglans"
+        # juice: "Jus"
         # lamiaceae: "Lamiaceae"
         # land_parcel: "Parcelle physique"
         # land_parcel_cluster: "Îlot"
