--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -617,6 +617,7 @@ jpn:
       # new: "Nouvelle équipe"
       # show: "Équipe\_: %{name}"
     backend/tools: #?
+    backend/transformed_products: #?
     backend/transports:
       # deliveries: "Livraisons du transport"
       # delivery_delete: "Retirer la livraison du transport"
@@ -633,6 +634,7 @@ jpn:
       # show: "Utilisateur\_: %{first_name} %{last_name}"
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
+    backend/wine_tanks: #?
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
