--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -698,6 +698,7 @@ spa:
     backend/tracking_states: #?
     backend/trackings: #?
     backend/transfers: #?
+    backend/transformed_products: #?
     backend/transports:
       # deliveries: "Livraisons du transport"
       # delivery_delete: "Retirer la livraison du transport"
@@ -718,6 +719,7 @@ spa:
       statistics: "Mis estadisticas" #?
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
+    backend/wine_tanks: #?
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
